--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ constantly==15.1.0
 cryptography==3.4.6
 cssselect==1.1.0
 Flask==1.1.2
+gunicorn==20.0.4
 hyperlink==21.0.0
 idna==3.1
 incremental==21.3.0
